disabled属性でボタンの有効、無効の切り替えと、stopボタンを作りました。

--- a/main.css
+++ b/main.css
@@ -11,10 +11,14 @@ h3 {
   text-align: center;
 }
 
-#startStop {
+#start {
   height: 30px;
   width:100px;
-  
+}
+
+#stop {
+  height:30px;
+  width:100px;
 }
 
 #reset {
